clusters/mac-mini/apps/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq-system
  annotations:
    kubernetes.io/ingress.class: nginx
    # RabbitMQ UI HTTP konuşur
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # SSL'i Cloudflare'de sonlandırıyoruz, döngü olmasın
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # WebSocket desteği (RabbitMQ istatistikleri anlık akar)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.baranacikgoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-rabbit # Operator bu servisi otomatik oluşturdu
                port:
                  number: 15672 # Yönetim paneli portu
